added link to pre-analysis plan

--- a/analysis/analyze-r-feminism-experiment-results.R.ipynb
+++ b/analysis/analyze-r-feminism-experiment-results.R.ipynb
@@ -835,6 +835,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>0.0806</li>\n",
+       "\t<li>0.479</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 0.0806\n",
+       "\\item 0.479\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 0.0806\n",
+       "2. 0.479\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] 0.0806 0.4790"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "p.adjust(c(0.0403, 0.479 ), method=\"hochberg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
